--- a/entertainment.html
+++ b/entertainment.html
@@ -220,18 +220,17 @@
                     <h2>Proč Vybrat Nás </h2>
                     <p>Odbornost: Naše tým tvoří zkušení cestovatelé s vlastními zkušenostmi z destinací po celém světě.
                         Prozkoumali jsme skryté poklady, prošli rušnými městy a putovali odlehlými stezkami, abychom vám
-                        přinesli nejlepší cestovatelské rady.
-                        Kompletní Průvodci: Od podrobných průvodců městy po tipy na balení, informace o vízech a
+                        přinesli nejlepší cestovatelské rady.</p>
+                    <p>Kompletní Průvodci: Od podrobných průvodců městy po tipy na balení, informace o vízech a
                         bezpečnostní rady nabízíme komplexní zdroje, které vám pomohou udělat vaši cestu plynulou a
-                        bezstarostnou.
-                        Osobní Doporučení: Každý cestovatel je jedinečný a to chápeme. Poskytujeme osobní doporučení,
+                        bezstarostnou.</p>
+                    <p>Osobní Doporučení: Každý cestovatel je jedinečný a to chápeme. Poskytujeme osobní doporučení,
                         která odpovídají vašim zájmům, rozpočtu a stylu cestování. Komunita: Vytvořili jsme živou
                         komunitu cestovatelů, kteří sdílí své zkušenosti,
                         poznatky a cestovatelské příběhy. Připojte se k naší komunitě a spojte se s podobně smýšlejícími
-                        dobrodruhy.
-                        Udržitelnost: Zastáváme zodpovědné a udržitelné cestování. Naše články a tipy podporují
-                        ekologické praktiky, které pomáhají chránit planetu a její vzácné destinace.
-                    </p>
+                        dobrodruhy.</p>
+                    <p>Udržitelnost: Zastáváme zodpovědné a udržitelné cestování. Naše články a tipy podporují
+                        ekologické praktiky, které pomáhají chránit planetu a její vzácné destinace.</p>
                 </div>
             </div>
         </div>
