--- a/local-cuisine.html
+++ b/local-cuisine.html
@@ -63,6 +63,18 @@
     </section>
     <!-- site banner end -->
 
+     <!-- site homecard start -->
+  <section class="homecard cuisine">
+    <div class="container">
+      <div class="row">
+        <div class="homecard__text">
+       <p>Česká republika je nejen o bohaté historii a krásných památkách, ale také o výtečném jídle. Zde je seznam některých z nejlepších restaurací po celé zemi, kde můžete ochutnat rozmanité pokrmy české kuchyně: </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- site homecard end -->
+
     <!-- site localcuisine start -->
     <section class="localcuisine">
         <div class="container">
