--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container">
       <div class="row">
         <div class="home__title">
-          <h1>Europe</h1>
+          <h1>Objevtejakoprvni</h1>
           <p>Otevřete dveře do kouzelného světa dechberoucích krajinných scenérií, bohaté historie a vřelého
             pohostinství. Zveme vás na nezapomenutelnou cestu srdcem střední Evropy: do České republiky. </p>
         </div>
@@ -73,19 +73,18 @@
           <h2>Proč Vybrat České Kouzlo?</h2>
           <p>Poutavé Destinace: Prozkoumejte zemi založenou v historii, s jejími středověkými městy, majestátními hrady
             a malebnými vesnicemi. Objevte malebné uličky Prahy, pohádkovou krajinu Českého Krumlova a skryté poklady,
-            které na vás čekají na každém rohu.
-            Místní Tipy: Náš tým českých expertů je oddán sdílení své lásky ke krajině s vámi. Ponořte se do kultury,
-            tradic a skrytých kouzel, které znají pouze místní, zajistíme tak autentický a pohlcující zážitek.
-            Přizpůsobené Zážitky: Ať už jste milovníkem umění, dobrodruhem, historickým nadšencem nebo milovníkem
-            kulinářství, nabízíme na míru šité itineráře, které budou vyhovovat vašim vášním a preferencím.
-            Opravdové Ubytování: Od luxusních hotelů po útulné penziony jsme pečlivě vybrali ubytování, které slibuje
-            pohodlí, charakter a autentičnost. Spíte klidně, vědouc, že jste v srdci českého pohostinství.
-            Lahodné Pokrmy: Zažijte Českou republiku skrze její lahodnou kuchyni. Pochutnejte si na sýrových knedlících,
-            slavném českém pivu a prozkoumejte živé tržnice, které ukazují kulinářské dovednosti této země.
-            Místní Události a Festivaly: Objevte živý duch českého lidu skrze jejich festivaly a akce. Ať už se jedná o
+            které na vás čekají na každém rohu.</p>
+           <p>Místní Tipy: Náš tým českých expertů je oddán sdílení své lásky ke krajině s vámi. Ponořte se do kultury,
+            tradic a skrytých kouzel, které znají pouze místní, zajistíme tak autentický a pohlcující zážitek.</p>
+          <p> Přizpůsobené Zážitky: Ať už jste milovníkem umění, dobrodruhem, historickým nadšencem nebo milovníkem
+            kulinářství, nabízíme na míru šité itineráře, které budou vyhovovat vašim vášním a preferencím.</p>
+          <p> Opravdové Ubytování: Od luxusních hotelů po útulné penziony jsme pečlivě vybrali ubytování, které slibuje
+            pohodlí, charakter a autentičnost. Spíte klidně, vědouc, že jste v srdci českého pohostinství.</p>
+          <p>Lahodné Pokrmy: Zažijte Českou republiku skrze její lahodnou kuchyni. Pochutnejte si na sýrových knedlících,
+            slavném českém pivu a prozkoumejte živé tržnice, které ukazují kulinářské dovednosti této země.</p>
+          <p>Místní Události a Festivaly: Objevte živý duch českého lidu skrze jejich festivaly a akce. Ať už se jedná o
             Pražské jaro, Český Krumlovský mezinárodní hudební festival nebo živou místní oslavu, budeme vás informovat
-            o tom, co se děje během vaší návštěvy.
-          </p>
+            o tom, co se děje během vaší návštěvy.</p>
         </div>
       </div>
     </div>
