--- a/privacy.html
+++ b/privacy.html
@@ -103,8 +103,8 @@
                             <p>Komunikovat s vámi, buď přímo, nebo prostřednictvím některého z našich partnerů, včetně
                                 zákaznických služeb, abychom vám poskytli aktualizace a další informace týkající se
                                 webových stránek a pro marketingové a propagační účely </p>
-                            <h4>Posílejte vám e-maily</h4>
-                            <h4>Najít a zabránit podvodům </h4>
+                            <p>Posílejte vám e-maily</p>
+                            <p>Najít a zabránit podvodům </p>
                             <p>Záznam souborů </p>
                             <p>Objevte jako první se řídí standardním postupem používání log souborů. Tyto soubory
                                 zaznamenávají návštěvníky, když navštíví webové stránky. Všechny hostingové společnosti
