--- a/privacy.html
+++ b/privacy.html
@@ -147,13 +147,14 @@
                             <p>Požadovat, aby podnik, který shromažďuje osobní údaje spotřebitelů,
                                 zveřejnil kategorie a konkrétní části osobních údajů, které podnik o spotřebitelích
                                 shromáždil. </p>
+                                <p>Požádejte, aby podnik vymazal veškeré osobní údaje o spotřebiteli, které podnik shromáždil.</p>
                             <p>Požadovat, aby podnik, který prodává osobní údaje spotřebitele, neprodával osobní údaje
                                 spotřebitele. </p>
                             <p>Pokud podáte žádost, máme jeden měsíc na to, abychom vám odpověděli. Pokud budete chtít
                                 některého z těchto práv využít, kontaktujte nás. </p>
-                            <p>Práva na ochranu osobních údajů GDPR </p>
-                            <h4>Rádi bychom se ujistili, že jste si plně vědomi všech svých práv na ochranu údajů. Každý
-                                uživatel má nárok na následující: </h4>
+                            <h4>Práva na ochranu osobních údajů GDPR </h4>
+                            <p>Rádi bychom se ujistili, že jste si plně vědomi všech svých práv na ochranu údajů. Každý
+                                uživatel má nárok na následující: </p>
                             <p>Právo na přístup – Máte právo požadovat kopie svých osobních údajů. Za tuto službu vám
                                 můžeme účtovat malý poplatek. </p>
                             <p>Právo na opravu – Máte právo požadovat, abychom opravili jakékoli informace, o kterých se
