--- a/privacy.html
+++ b/privacy.html
@@ -147,7 +147,8 @@
                             <p>Požadovat, aby podnik, který shromažďuje osobní údaje spotřebitelů,
                                 zveřejnil kategorie a konkrétní části osobních údajů, které podnik o spotřebitelích
                                 shromáždil. </p>
-                                <p>Požádejte, aby podnik vymazal veškeré osobní údaje o spotřebiteli, které podnik shromáždil.</p>
+                            <p>Požádejte, aby podnik vymazal veškeré osobní údaje o spotřebiteli, které podnik
+                                shromáždil.</p>
                             <p>Požadovat, aby podnik, který prodává osobní údaje spotřebitele, neprodával osobní údaje
                                 spotřebitele. </p>
                             <p>Pokud podáte žádost, máme jeden měsíc na to, abychom vám odpověděli. Pokud budete chtít
