--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -85,7 +85,8 @@
                             <p>Kromě obsahu, který vlastníte, podle těchto Podmínek společnost Objevte jako první a/nebo
                                 její poskytovatelé licencí vlastní všechna práva duševního vlastnictví a materiály
                                 obsažené na těchto webových stránkách.</p>
-                                <p>Je vám udělena omezená licence pouze pro účely prohlížení materiálů obsažených na této webové stránce. </p>
+                            <p>Je vám udělena omezená licence pouze pro účely prohlížení materiálů obsažených na této
+                                webové stránce. </p>
                             <h4>Omezení </h4>
                             <p>Jste výslovně omezeni na všechny následující:</p>
                             <ul>
