--- a/budget.html
+++ b/budget.html
@@ -267,7 +267,7 @@
             <div class="row">
                 <div class=" col-lg-4 col-md-4 col-sm-12">
                     <div class="site-logo">
-                        <img src="images/header-logo.png" class="img-fluid" alt="header-logo">
+                        <a href="index.html"><img src="images/header-logo.png" class="img-fluid" alt="header-logo"></a>
                     </div>
                     <div class="footer__social">
                         <ul>
