--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
       <div class="row">
         <div class=" col-lg-4 col-md-4 col-sm-12">
           <div class="site-logo">
-            <img src="images/header-logo.png" class="img-fluid" alt="header-logo">
-          </div>
+            <a href="index.html"><img src="images/header-logo.png" class="img-fluid" alt="header-logo"></a>
+        </div>
           <div class="footer__social">
             <ul>
               <li><a href="https://www.facebook.com/login/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
