--- a/index.html
+++ b/index.html
@@ -74,13 +74,14 @@
           <p>Poutavé Destinace: Prozkoumejte zemi založenou v historii, s jejími středověkými městy, majestátními hrady
             a malebnými vesnicemi. Objevte malebné uličky Prahy, pohádkovou krajinu Českého Krumlova a skryté poklady,
             které na vás čekají na každém rohu.</p>
-           <p>Místní Tipy: Náš tým českých expertů je oddán sdílení své lásky ke krajině s vámi. Ponořte se do kultury,
+          <p>Místní Tipy: Náš tým českých expertů je oddán sdílení své lásky ke krajině s vámi. Ponořte se do kultury,
             tradic a skrytých kouzel, které znají pouze místní, zajistíme tak autentický a pohlcující zážitek.</p>
           <p> Přizpůsobené Zážitky: Ať už jste milovníkem umění, dobrodruhem, historickým nadšencem nebo milovníkem
             kulinářství, nabízíme na míru šité itineráře, které budou vyhovovat vašim vášním a preferencím.</p>
           <p> Opravdové Ubytování: Od luxusních hotelů po útulné penziony jsme pečlivě vybrali ubytování, které slibuje
             pohodlí, charakter a autentičnost. Spíte klidně, vědouc, že jste v srdci českého pohostinství.</p>
-          <p>Lahodné Pokrmy: Zažijte Českou republiku skrze její lahodnou kuchyni. Pochutnejte si na sýrových knedlících,
+          <p>Lahodné Pokrmy: Zažijte Českou republiku skrze její lahodnou kuchyni. Pochutnejte si na sýrových
+            knedlících,
             slavném českém pivu a prozkoumejte živé tržnice, které ukazují kulinářské dovednosti této země.</p>
           <p>Místní Události a Festivaly: Objevte živý duch českého lidu skrze jejich festivaly a akce. Ať už se jedná o
             Pražské jaro, Český Krumlovský mezinárodní hudební festival nebo živou místní oslavu, budeme vás informovat
@@ -140,7 +141,7 @@
         <div class=" col-lg-4 col-md-4 col-sm-12">
           <div class="site-logo">
             <a href="index.html"><img src="images/header-logo.png" class="img-fluid" alt="header-logo"></a>
-        </div>
+          </div>
           <div class="footer__social">
             <ul>
               <li><a href="https://www.facebook.com/login/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
