--- a/privacy.html
+++ b/privacy.html
@@ -233,6 +233,7 @@
                             <li><a href="attraction.html">Atrakce</a></li>
                             <li><a href="entertainment.html">Zábava</a></li>
                             <li><a href="privacy.html">Zásady ochrany </a></li>
+                            <li><a href="contact-us.html">Kontaktujte nás</a></li>
                             <li><a href="terms-conditions.html">Podmínky Objevte </a></li>
                         </ul>
                     </div>
