--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <div class="col-lg-6  col-sm-12 equal">
           <div class="homemain__part">
-            <h3>Vybrané <br>Destinace</h3>
+            <h3>Vybrané Destinace</h3>
             <p>Praha: "Město sto věží" vás láká svou gotickou a barokní architekturou, živým Staroměstským náměstím a
               úchvatným Pražským hradem. </p>
             <p>Český Krumlov: Vstupte do pohádky, když se procházíte úzkými uličkami tohoto města zapsaného na seznam
