--- a/hotels.html
+++ b/hotels.html
@@ -73,7 +73,8 @@
                             01
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/hotelcard1.jpg" class="img-fluid" alt="hotelcard1">
+                            <a href="https://www.marriott.com/en-us/hotels/prglc-augustine-a-luxury-collectio n-hotel-prague/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0 "
+                                target="_blank"><img src="images/hotelcard1.jpg" class="img-fluid" alt="hotelcard1"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -82,8 +83,8 @@
                             komfortu. Je umístěn v bývalém klášteře a nabízí elegantní pokoje, nádherný dvůr a
                             vynikající restaurace. </p>
                         <div class="hotel-btn">
-                            <a
-                                href="https://www.marriott.com/en-us/hotels/prglc-augustine-a-luxury-collectio n-hotel-prague/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0 ">Ukázat
+                            <a href="https://www.marriott.com/en-us/hotels/prglc-augustine-a-luxury-collectio n-hotel-prague/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0 "
+                                target="_blank">Ukázat
                                 více</a>
                         </div>
                     </div>
@@ -94,7 +95,8 @@
                             02
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/hotelcard2.jpg" class="img-fluid" alt="hotelcard2">
+                            <a href="https://www.ariahotel.net/" target="_blank"><img src="images/hotelcard2.jpg"
+                                    class="img-fluid" alt="hotelcard2"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -103,7 +105,7 @@
                             věnován konkrétnímu hudebnímu umělci a střešní terasa nabízí panoramatický výhled na město.
                         </p>
                         <div class="hotel-btn">
-                            <a href="https://www.ariahotel.net/">Ukázat více</a>
+                            <a href="https://www.ariahotel.net/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +117,8 @@
                             03
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/hotelcard3.jpg" class="img-fluid" alt="hotelcard3">
+                            <a href="https://www.grandmark.cz/" target="_blank"><img src="images/hotelcard3.jpg"
+                                    class="img-fluid" alt="hotelcard3"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -123,7 +126,7 @@
                         <p>Hotel v historické budově z 17. století nabízí luxusní pokoje, lázeňské centrum a krásnou
                             dvorní zahradu. Nachází se v docházkové vzdálenosti od hlavních pražských památek. </p>
                         <div class="hotel-btn">
-                            <a href="https://www.grandmark.cz/ ">Ukázat více</a>
+                            <a href="https://www.grandmark.cz/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -133,7 +136,8 @@
                             04
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/hotelcard4.jpg" class="img-fluid" alt="hotelcard4">
+                            <a href="https://www.chateaumcely.cz/" target="_blank"><img src="images/hotelcard4.jpg"
+                                    class="img-fluid" alt="hotelcard4"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -141,7 +145,7 @@
                         <p>Tento pohádkový zámek se nachází v malebné české krajině a nabízí luxusní pokoje, wellness
                             centrum a bio restauraci. Skvělý pro romantický pobyt.</p>
                         <div class="hotel-btn">
-                            <a href="https://www.chateaumcely.cz/ ">Ukázat více</a>
+                            <a href="https://www.chateaumcely.cz/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -153,7 +157,8 @@
                             05
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/hotelcard5.jpg" class="img-fluid" alt="hotelcard5">
+                            <a href="https://www.carlsbad-plaza.com/en/?utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph"
+                                target="_blank"><img src="images/hotelcard5.jpg" class="img-fluid" alt="hotelcard5"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -162,8 +167,8 @@
                             5hvězdičkový hotel nabízí léčebné procedury, minerální bazény a gurmánskou kuchyni v krásném
                             prostředí. </p>
                         <div class="hotel-btn">
-                            <a
-                                href="https://www.carlsbad-plaza.com/en/?utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph ">Ukázat
+                            <a href="https://www.carlsbad-plaza.com/en/?utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph"
+                                target="_blank">Ukázat
                                 více</a>
                         </div>
                     </div>
@@ -174,7 +179,8 @@
                             06
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/hotelcard6.jpg" class="img-fluid" alt="hotelcard6">
+                            <a href="http://www.svamberskydum.cz/new/" target="_blank"><img src="images/hotelcard6.jpg"
+                                    class="img-fluid" alt="hotelcard6"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -182,7 +188,7 @@
                         <p>Uprostřed kouzelného města Český Krumlov nabízí tento boutique hotel útulné pokoje s výhledem
                             na řeku Vltavu a středověkou architekturu města. </p>
                         <div class="hotel-btn">
-                            <a href="http://www.svamberskydum.cz/new/ ">Ukázat více</a>
+                            <a href="http://www.svamberskydum.cz/new/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -194,7 +200,8 @@
                             07
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/hotelcard7.jpg" class="img-fluid" alt="hotelcard7">
+                            <a href="https://www.esplanade-marienbad.cz/cs/" target="_blank"><img
+                                    src="images/hotelcard7.jpg" class="img-fluid" alt="hotelcard7"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -202,7 +209,7 @@
                         <p>Umístěný v historické budově uprostřed krásných lázeňských zahrad, tento hotel je ideální pro
                             milovníky relaxace a wellness. Užijte si golf, lázeňské procedury a gurmánskou kuchyni.</p>
                         <div class="hotel-btn">
-                            <a href="https://www.esplanade-marienbad.cz/cs/">Ukázat více</a>
+                            <a href="https://www.esplanade-marienbad.cz/cs/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -212,7 +219,8 @@
                             08
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/hotelcard8.jpg" class="img-fluid" alt="hotelcard8">
+                            <a href="https://www.hotelruze.cz/ " target="_blank"><img src="images/hotelcard8.jpg"
+                                    class="img-fluid" alt="hotelcard8"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -220,7 +228,7 @@
                         <p>Další skvost Českého Krumlova, Hotel Ruže je umístěn v bývalém jezuitském klášteře. Nabízí
                             elegantní pokoje s výhledem na hrad a ikonické červené střechy města. </p>
                         <div class="hotel-btn">
-                            <a href="https://www.hotelruze.cz/ ">Ukázat více</a>
+                            <a href="https://www.hotelruze.cz/ " target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -232,7 +240,8 @@
                             09
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/hotelcard9.jpg" class="img-fluid" alt="hotelcard9">
+                            <a href="https://www.fourseasons.com/prague/?utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na "
+                                target="_blank"><img src="images/hotelcard9.jpg" class="img-fluid" alt="hotelcard9"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -240,8 +249,8 @@
                         <p>Tento luxusní hotel nabízí nejvyšší komfort a má výhodnou polohu na břehu řeky Vltavy. Užijte
                             si luxusní pokoje, vynikající gastronomii a střešní terasu s úchvatnými výhledy. </p>
                         <div class="hotel-btn">
-                            <a
-                                href="https://www.fourseasons.com/prague/?utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na ">Ukázat
+                            <a href="https://www.fourseasons.com/prague/?utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na "
+                                target="_blank">Ukázat
                                 více</a>
                         </div>
                     </div>
