--- a/hotels.html
+++ b/hotels.html
@@ -73,8 +73,7 @@
                             01
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://www.marriott.com/en-us/hotels/prglc-augustine-a-luxury-collectio n-hotel-prague/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0 "
-                                target="_blank"><img src="images/hotelcard1.jpg" class="img-fluid" alt="hotelcard1"></a>
+                            <a href="https://www.marriott.com/en-us/hotels/prglc-augustine-a-luxury-collectio n-hotel-prague/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0 " target="_blank"><img src="images/hotelcard1.jpg" class="img-fluid" alt="hotelcard1"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -83,8 +82,7 @@
                             komfortu. Je umístěn v bývalém klášteře a nabízí elegantní pokoje, nádherný dvůr a
                             vynikající restaurace. </p>
                         <div class="hotel-btn">
-                            <a href="https://www.marriott.com/en-us/hotels/prglc-augustine-a-luxury-collectio n-hotel-prague/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0 "
-                                target="_blank">Ukázat
+                            <a href="https://www.marriott.com/en-us/hotels/prglc-augustine-a-luxury-collectio n-hotel-prague/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0 " target="_blank">Ukázat
                                 více</a>
                         </div>
                     </div>
@@ -157,8 +155,7 @@
                             05
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://www.carlsbad-plaza.com/en/?utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph"
-                                target="_blank"><img src="images/hotelcard5.jpg" class="img-fluid" alt="hotelcard5"></a>
+                            <a href="https://www.carlsbad-plaza.com/en/?utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph" target="_blank"><img src="images/hotelcard5.jpg" class="img-fluid" alt="hotelcard5"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -167,8 +164,7 @@
                             5hvězdičkový hotel nabízí léčebné procedury, minerální bazény a gurmánskou kuchyni v krásném
                             prostředí. </p>
                         <div class="hotel-btn">
-                            <a href="https://www.carlsbad-plaza.com/en/?utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph"
-                                target="_blank">Ukázat
+                            <a href="https://www.carlsbad-plaza.com/en/?utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph" target="_blank">Ukázat
                                 více</a>
                         </div>
                     </div>
@@ -179,8 +175,7 @@
                             06
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="http://www.svamberskydum.cz/new/" target="_blank"><img src="images/hotelcard6.jpg"
-                                    class="img-fluid" alt="hotelcard6"></a>
+                            <a href="http://www.svamberskydum.cz/new/" target="_blank"><img src="images/hotelcard6.jpg" class="img-fluid" alt="hotelcard6"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -200,8 +195,7 @@
                             07
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://www.esplanade-marienbad.cz/cs/" target="_blank"><img
-                                    src="images/hotelcard7.jpg" class="img-fluid" alt="hotelcard7"></a>
+                            <a href="https://www.esplanade-marienbad.cz/cs/" target="_blank"><img src="images/hotelcard7.jpg" class="img-fluid" alt="hotelcard7"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -240,8 +234,7 @@
                             09
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://www.fourseasons.com/prague/?utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na "
-                                target="_blank"><img src="images/hotelcard9.jpg" class="img-fluid" alt="hotelcard9"></a>
+                            <a href="https://www.fourseasons.com/prague/?utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na " target="_blank"><img src="images/hotelcard9.jpg" class="img-fluid" alt="hotelcard9"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -249,8 +242,7 @@
                         <p>Tento luxusní hotel nabízí nejvyšší komfort a má výhodnou polohu na břehu řeky Vltavy. Užijte
                             si luxusní pokoje, vynikající gastronomii a střešní terasu s úchvatnými výhledy. </p>
                         <div class="hotel-btn">
-                            <a href="https://www.fourseasons.com/prague/?utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na "
-                                target="_blank">Ukázat
+                            <a href="https://www.fourseasons.com/prague/?utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na " target="_blank">Ukázat
                                 více</a>
                         </div>
                     </div>
