--- a/entertainment.html
+++ b/entertainment.html
@@ -111,9 +111,7 @@
                         <p> Ubytování: Máte k dispozici luxusní pokoje v blízkosti historických památek, jako je
                             Staroměstské náměstí a Karlův most. </p>
                         <div class="hotel-btn">
-                            <a
-                                href="https://www.hilton.com/en/hotels/prghitw-hilton-prague/?SEO_id=GMB-EMEA-T W-PRGHITW  ">Ukázat
-                                více</a>
+                            <a href="https://www.hilton.com/en/hotels/prghitw-hilton-prague/?SEO_id=GMB-EMEA-T W-PRGHITW  ">Ukázat více</a>
                         </div>
                     </div>
                 </div>
