--- a/budget.html
+++ b/budget.html
@@ -87,7 +87,7 @@
                             01
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/budgetcard1.jpg" class="img-fluid" alt="budgetcard1">
+                            <a href="https://www.czech-inn.com/" target="_blank"><img src="images/budgetcard1.jpg" class="img-fluid" alt="budgetcard1"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -107,7 +107,7 @@
                             02
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/budgetcard2.jpg" class="img-fluid" alt="budgetcard2">
+                            <a href="https://onefamhostels.com/" target="_blank"><img src="images/budgetcard2.jpg" class="img-fluid" alt="budgetcard2"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -128,7 +128,7 @@
                             03
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/budgetcard3.jpg" class="img-fluid" alt="budgetcard3">
+                            <a href="https://www.mosaichouse.com/cs/ " target="_blank"><img src="images/budgetcard3.jpg" class="img-fluid" alt="budgetcard3"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -146,7 +146,7 @@
                             04
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/budgetcard4.jpg" class="img-fluid" alt="budgetcard4">
+                            <a href="https://www.miss-sophies.com/olomouc/" target="_blank"><img src="images/budgetcard4.jpg" class="img-fluid" alt="budgetcard4"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -167,7 +167,7 @@
                             05
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/budgetcard5.jpg" class="img-fluid" alt="budgetcard5">
+                            <a href="http://mdcb.cz/" target="_blank"><img src="images/budgetcard5.jpg" class="img-fluid" alt="budgetcard5"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -186,7 +186,7 @@
                             06
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/budgetcard6.jpg" class="img-fluid" alt="budgetcard6">
+                            <a href="https://hostel-boudnik.praguehotelsweb.com/de/" target="_blank"><img src="images/budgetcard6.jpg" class="img-fluid" alt="budgetcard6"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -208,7 +208,7 @@
                             07
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/budgetcard7.jpg" class="img-fluid" alt="budgetcard7">
+                            <a href="https://hosteldakura.com/" target="_blank"><img src="images/budgetcard7.jpg" class="img-fluid" alt="budgetcard7"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
@@ -227,7 +227,7 @@
                             08
                         </div>
                         <div class="hotelcard__picture">
-                            <img src="images/budgetcard8.jpg" class="img-fluid" alt="budgetcard8">
+                            <a href="https://www.sirtobys.com/" target="_blank"><img src="images/budgetcard8.jpg" class="img-fluid" alt="budgetcard8"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
