--- a/local-cuisine.html
+++ b/local-cuisine.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 space">
                     <div class="slovernia__card">
                         <div class="slovernia__destinations">
-                            <img src="images/localcard1.jpg" class="img-fluid" alt="localcard1">
+                            <a href="https://www.ladegustation.cz/ " target="_blank"> <img src="images/localcard1.jpg" class="img-fluid" alt="localcard1"></a>
                             <div class="Slovenia__content">
                                 <h3>La Degustation Bohême Bourgeoise, Praha</h3>
                                 <p>Tato michelinská restaurace v centru Prahy vám představí tradiční českou kuchyni v
@@ -97,7 +97,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 space">
                     <div class="slovernia__card">
                         <div class="slovernia__destinations">
-                            <img src="images/localcard2.jpg" class="img-fluid" alt="localcard2">
+                            <a href="https://lokal-dlouha.ambi.cz/en/ " target="_blank"> <img src="images/localcard2.jpg" class="img-fluid" alt="localcard2"></a>
                             <div class="Slovenia__content">
                                 <h3>Lokál, Praha </h3>
                                 <p> Pro skvělou českou klasiku nemůžete minout restauraci Lokál. Zde si můžete vychutnat
@@ -112,7 +112,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 space">
                     <div class="slovernia__card">
                         <div class="slovernia__destinations">
-                            <img src="images/localcard3.jpg" class="img-fluid" alt="localcard3">
+                            <a href="https://www.fieldrestaurant.cz/en/ " target="_blank"> <img src="images/localcard3.jpg" class="img-fluid" alt="localcard3"></a>
                             <div class="Slovenia__content">
                                 <h3>Field, Praha </h3>
                                 <p>Field je další michelinská restaurace v Praze, která se specializuje na moderní
@@ -127,7 +127,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 space">
                     <div class="slovernia__card">
                         <div class="slovernia__destinations">
-                            <img src="images/localcard4.jpg" class="img-fluid" alt="slovenia-home4">
+                            <a href="https://cestr.ambi.cz/" target="_blank"> <img src="images/localcard4.jpg" class="img-fluid" alt="slovenia-home4"></a>
                             <div class="Slovenia__content">
                                 <h3>Čestr, Praha </h3>
                                 <p> Tato restaurace je pro milovníky masa. Čestr se zaměřuje na kvalitní hovězí a
@@ -141,7 +141,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 space">
                     <div class="slovernia__card">
                         <div class="slovernia__destinations">
-                            <img src="images/localcard5.jpg" class="img-fluid" alt="localcard5">
+                            <a href="https://www.ukroka.cz/menu " target="_blank"><img src="images/localcard5.jpg" class="img-fluid" alt="localcard5"></a>
                             <div class="Slovenia__content">
                                 <h3>U Kroka, Brno</h3>
                                 <p> V Brně můžete ochutnat tradiční moravskou kuchyni v restauraci U Kroka. Nechte se
@@ -155,7 +155,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 space">
                     <div class="slovernia__card">
                         <div class="slovernia__destinations">
-                            <img src="images/localcard6.jpg" class="img-fluid" alt="localcard6">
+                            <a href="https://www.mlynec.cz/en/" target="_blank"><img src="images/localcard6.jpg" class="img-fluid" alt="localcard6"></a>
                             <div class="Slovenia__content">
                                 <h3>Restaurace Mlýnec, Praha</h3>
                                 <p>Mlýnec vám nabídne elegantní kulinářský zážitek při pohledu na panoramatický výhled
@@ -170,7 +170,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 space">
                     <div class="slovernia__card">
                         <div class="slovernia__destinations">
-                            <img src="images/localcard7.jpg" class="img-fluid" alt="localcard7">
+                            <a href="https://www.uprovaznice.cz/" target="_blank"><img src="images/localcard7.jpg" class="img-fluid" alt="localcard7"></a>
                             <div class="Slovenia__content">
                                 <h3>Restaurace U Provaznice, Kutná Hora</h3>
                                 <p>Tato historická restaurace v Kutné Hoře vám představí tradiční pokrmy z regionu
@@ -184,7 +184,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 space">
                     <div class="slovernia__card">
                         <div class="slovernia__destinations">
-                            <img src="images/localcard8.jpg" class="img-fluid" alt="localcard8">
+                            <a href="https://www.svejk.cz/cs/home/" target="_blank"><img src="images/localcard8.jpg" class="img-fluid" alt="localcard8"></a>
                             <div class="Slovenia__content">
                                 <h3>Restaurace Švejk, Praha</h3>
                                 <p>Inspirovaná postavou Josefa Švejka, tato restaurace nabízí české pokrmy s humorem.
@@ -198,7 +198,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 space">
                     <div class="slovernia__card">
                         <div class="slovernia__destinations">
-                            <img src="images/localcard9.jpg" class="img-fluid" alt="localcard9">
+                            <a href="https://www.naspilce.cz/" target="_blank"><img src="images/localcard9.jpg" class="img-fluid" alt="localcard9"></a>
                             <div class="Slovenia__content">
                                 <h3>Restaurace Na Spilce, Plzeň </h3>
                                 <p>Plzeň je domovem slavného piva, a tak si v restauraci Na Spilce můžete vychutnat
