--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <link rel="stylesheet" href="css/owl.theme.default.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
-  <link rel="icon" href="images/favicon.png" id="lightheme" type="image/x-icon">
+  <!-- <link rel="icon" href="images/favicon.png" id="lightheme" type="image/x-icon"> -->
+  <link rel="icon" href="images/favicon.png" id="light-scheme-icon">
+<link rel="icon" href="images/favicon.png" id="dark-scheme-icon">
   <title>Homepage</title>
 </head>
 
@@ -214,7 +216,17 @@
     });
   </script>
 
-
+<script>
+  function onUpdate() {
+  if (matcher.matches) {
+    lightSchemeIcon.remove();
+    document.head.append(darkSchemeIcon);
+  } else {
+    document.head.append(lightSchemeIcon);
+    darkSchemeIcon.remove();
+  }
+}
+</script>
 
 
 </body>
