--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
     darkSchemeIcon.remove();
   }
 }
+
+lightSchemeIcon = document.querySelector('link#light-scheme-icon');
+darkSchemeIcon = document.querySelector('link#dark-scheme-icon');
 </script>
 
 
