--- a/hotely.html
+++ b/hotely.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <title>Rozpočet</title>
+    <title>Hotely</title>
 </head>
 
 <body>
@@ -28,13 +28,13 @@
 
             <nav class="site-nav">
                 <ul>
-                    <li><a href="index.html">Hlavnístránka</a></li>
-                    <li><a href="hotels.html">Hotely</a></li>
-                    <li><a href="budget.html" class=" menu active">Rozpočet</a></li>
-                    <li><a href="local-cuisine.html">Místní Kuchyně</a></li>
-                    <li><a href="attraction.html">Atrakce</a></li>
-                    <li><a href="entertainment.html">Zábava</a></li>
-                    <li><a href="contact-us.html">Kontaktujte nás</a></li>
+                    <li><a href="index.html">Hlavnistranka</a></li>
+                    <li><a href="hotely.html" class=" menu active">Hotely</a></li>
+                    <li><a href="rozpocet.html">Rozpocet</a></li>
+                    <li><a href="mistni-kuchyne.html">Mistni Kuchyne</a></li>
+                    <li><a href="atrakce.html">Atrakce</a></li>
+                    <li><a href="zabava.html">Zabava</a></li>
+                    <li><a href="kontaktujte-nas.html">Kontaktujte nas</a></li>
                     <li>
                         <div class="closed-menu">
                             <a href="#">×</a>
@@ -52,30 +52,16 @@
     <!-- site header end -->
 
     <!-- site banner start -->
-    <section class="budgetbanner">
+    <section class="hotelbanner">
         <div class="container">
             <div class="row">
                 <div class="home__title">
-                    <h1>Rozpočet</h1>
+                    <h1>Hotely</h1>
                 </div>
             </div>
         </div>
     </section>
     <!-- site banner end -->
-
-    <!-- site homecard start -->
-    <section class="homecard budget">
-        <div class="container">
-            <div class="row">
-                <div class="homecard__text">
-                    <p>Cestování s omezeným rozpočtem neznamená, že musíte ustoupit z pohodlí a kvality. V České
-                        republice najdete mnoho cenově dostupných ubytovacích možností, které nabízejí jak dostupnost,
-                        tak nezapomenutelný pobyt. Zde je výběr některých z nejlepších levných hotelů po celé zemi:</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- site homecard end -->
 
     <!-- site hotelcard start -->
     <section class="hotelcard">
@@ -87,16 +73,16 @@
                             01
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://www.czech-inn.com/" target="_blank"><img src="images/budgetcard1.jpg" class="img-fluid" alt="budgetcard1"></a>
+                            <a href="https://www.marriott.com/en-us/hotels/prglc-augustine-a-luxury-collectio n-hotel-prague/overview/scid=f2ae0541-1279-4f24-b197-a979c79310b0 " target="_blank"><img src="images/hotelcard1.jpg" class="img-fluid" alt="hotelcard1"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
-                        <h3>Czech Inn, Praha </h3>
-                        <p>Skrytý v hipsterské čtvrti Žižkov, Czech Inn je stylový hostel, který nabízí soukromé pokoje
-                            s moderním vybavením. S živou atmosférou, přátelským personálem a živým barem je oblíbeným
-                            místem pro cestovatele, kteří šetří penězi.</p>
+                        <h3>The Augustine, Praha</h3>
+                        <p>Tento luxusní hotel se nachází v srdci Prahy a nabízí kombinaci historie a moderního
+                            komfortu. Je umístěn v bývalém klášteře a nabízí elegantní pokoje, nádherný dvůr a
+                            vynikající restaurace. </p>
                         <div class="hotel-btn">
-                            <a href="https://www.czech-inn.com/">Ukázat
+                            <a href="https://www.marriott.com/en-us/hotels/prglc-augustine-a-luxury-collectio n-hotel-prague/overview/scid=f2ae0541-1279-4f24-b197-a979c79310b0 " target="_blank">Ukázat
                                 více</a>
                         </div>
                     </div>
@@ -107,16 +93,17 @@
                             02
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://onefamhostels.com/" target="_blank"><img src="images/budgetcard2.jpg" class="img-fluid" alt="budgetcard2"></a>
+                            <a href="https://www.ariahotel.net/" target="_blank"><img src="images/hotelcard2.jpg"
+                                    class="img-fluid" alt="hotelcard2"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
-                        <h3>Hostel One Home, Praha</h3>
-                        <p> Nacházející se v samém srdci Prahy, Hostel One Home poskytuje útulné a společenské prostředí
-                            pro cestovatele. Hostel každodenně pořádá různé aktivity a události, což usnadňuje setkávání
-                            s ostatními dobrodruhy. </p>
+                        <h3>Aria Hotel, Praha </h3>
+                        <p>Boutique hotel zaměřený na hudbu, který se nachází nedaleko Pražského hradu. Každý pokoj je
+                            věnován konkrétnímu hudebnímu umělci a střešní terasa nabízí panoramatický výhled na město.
+                        </p>
                         <div class="hotel-btn">
-                            <a href="https://onefamhostels.com/">Ukázat více</a>
+                            <a href="https://www.ariahotel.net/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -128,15 +115,16 @@
                             03
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://www.mosaichouse.com/cs/ " target="_blank"><img src="images/budgetcard3.jpg" class="img-fluid" alt="budgetcard3"></a>
+                            <a href="https://www.grandmark.cz/" target="_blank"><img src="images/hotelcard3.jpg"
+                                    class="img-fluid" alt="hotelcard3"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
-                        <h3>Mosaic House, Praha</h3>
-                        <p>Unikátní ekologicky šetrný hotel Mosaic House nabízí cenově výhodné ubytování s moderním
-                            designem. Je blízko centra města a má vlastní bar a kavárnu. </p>
+                        <h3>The Grand Mark Prague </h3>
+                        <p>Hotel v historické budově z 17. století nabízí luxusní pokoje, lázeňské centrum a krásnou
+                            dvorní zahradu. Nachází se v docházkové vzdálenosti od hlavních pražských památek. </p>
                         <div class="hotel-btn">
-                            <a href="https://www.mosaichouse.com/cs/ ">Ukázat více</a>
+                            <a href="https://www.grandmark.cz/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -146,16 +134,16 @@
                             04
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://www.miss-sophies.com/olomouc/" target="_blank"><img src="images/budgetcard4.jpg" class="img-fluid" alt="budgetcard4"></a>
+                            <a href="https://www.chateaumcely.cz/" target="_blank"><img src="images/hotelcard4.jpg"
+                                    class="img-fluid" alt="hotelcard4"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
-                        <h3>Miss Sophie's, Olomouc</h3>
-                        <p> Nacházející se v kouzelném městě Olomouc, Miss Sophie's je boutique hostel nabízející
-                            stylové a cenově dostupné pokoje. Přátelský personál vám rád poskytne tipy na objevování
-                            tohoto historického pokladu. </p>
+                        <h3>Chateau Mcely</h3>
+                        <p>Tento pohádkový zámek se nachází v malebné české krajině a nabízí luxusní pokoje, wellness
+                            centrum a bio restauraci. Skvělý pro romantický pobyt.</p>
                         <div class="hotel-btn">
-                            <a href="https://www.miss-sophies.com/olomouc/ ">Ukázat více</a>
+                            <a href="https://www.chateaumcely.cz/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -167,15 +155,16 @@
                             05
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="http://mdcb.cz/" target="_blank"><img src="images/budgetcard5.jpg" class="img-fluid" alt="budgetcard5"></a>
+                            <a href="https://www.carlsbad-plaza.com/en/utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph" target="_blank"><img src="images/hotelcard5.jpg" class="img-fluid" alt="hotelcard5"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
-                        <h3>Casa de la Musica, Brno </h3>
-                        <p>Tento funky hostel v Brně nabízí cenově dostupné pokoje a živou atmosféru. Je známý svým
-                            hudebním dekorem a je skvělým výchozím bodem pro prozkoumání kulturních atrakcí města. </p>
+                        <h3>Karlovy Vary: Carlsbad Plaza Medical Spa & Wellness Hotel </h3>
+                        <p>Jedna z nejlepších destinací pro wellness a lázeňské procedury v Karlových Varech. Tento
+                            5hvězdičkový hotel nabízí léčebné procedury, minerální bazény a gurmánskou kuchyni v krásném
+                            prostředí. </p>
                         <div class="hotel-btn">
-                            <a href="http://mdcb.cz/">Ukázat
+                            <a href="https://www.carlsbad-plaza.com/en/utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph" target="_blank">Ukázat
                                 více</a>
                         </div>
                     </div>
@@ -186,17 +175,15 @@
                             06
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://hostel-boudnik.praguehotelsweb.com/de/" target="_blank"><img src="images/budgetcard6.jpg" class="img-fluid" alt="budgetcard6"></a>
+                            <a href="http://www.svamberskydum.cz/new/" target="_blank"><img src="images/hotelcard6.jpg" class="img-fluid" alt="hotelcard6"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
-                        <h3>Hostel Boudnik, Brno </h3>
-                        <p> Umístěný v bývalém pivovaru, Hostel Boudnik je unikátní levnou možností ubytování. Nabízí
-                            pohodlné ubytování ve společných pokojích i
-                            soukromých pokojích a pravidelně pořádá kulturní události.
-                        </p>
+                        <h3>Smetana Hotel, Český Krumlov </h3>
+                        <p>Uprostřed kouzelného města Český Krumlov nabízí tento boutique hotel útulné pokoje s výhledem
+                            na řeku Vltavu a středověkou architekturu města. </p>
                         <div class="hotel-btn">
-                            <a href="https://hostel-boudnik.praguehotelsweb.com/de/ ">Ukázat více</a>
+                            <a href="http://www.svamberskydum.cz/new/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -208,16 +195,15 @@
                             07
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://hosteldakura.com/" target="_blank"><img src="images/budgetcard7.jpg" class="img-fluid" alt="budgetcard7"></a>
+                            <a href="https://www.esplanade-marienbad.cz/cs/" target="_blank"><img src="images/hotelcard7.jpg" class="img-fluid" alt="hotelcard7"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
-                        <h3>Hostel Dakura, Praha </h3>
-                        <p>Skrytý v klidné rezidenční čtvrti Prahy, Hostel Dakura poskytuje klidné místo k odpočinku po
-                            dni plném prohlídek. S zahradou a terasou je skvělým skrytým pokladem pro cestovatele s
-                            omezeným rozpočtem. </p>
+                        <h3>Esplanade Spa & Golf Resort, Mariánské Lázně </h3>
+                        <p>Umístěný v historické budově uprostřed krásných lázeňských zahrad, tento hotel je ideální pro
+                            milovníky relaxace a wellness. Užijte si golf, lázeňské procedury a gurmánskou kuchyni.</p>
                         <div class="hotel-btn">
-                            <a href="https://hosteldakura.com/ ">Ukázat více</a>
+                            <a href="https://www.esplanade-marienbad.cz/cs/" target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
@@ -227,20 +213,42 @@
                             08
                         </div>
                         <div class="hotelcard__picture">
-                            <a href="https://www.sirtobys.com/" target="_blank"><img src="images/budgetcard8.jpg" class="img-fluid" alt="budgetcard8"></a>
+                            <a href="https://www.hotelruze.cz/ " target="_blank"><img src="images/hotelcard8.jpg"
+                                    class="img-fluid" alt="hotelcard8"></a>
                         </div>
                     </div>
                     <div class="hotelcard__part">
-                        <h3>Sir Toby's Hostel, Praha </h3>
-                        <p>Nacházející se v moderní čtvrti Holešovice, Sir Toby's Hostel nabízí útulné a přívětivé
-                            prostředí. S hospodou na místě je fantastickým místem ke komunikaci s ostatními cestovateli.
-                        </p>
+                        <h3>Hotel Ruže, Český Krumlov </h3>
+                        <p>Další skvost Českého Krumlova, Hotel Ruže je umístěn v bývalém jezuitském klášteře. Nabízí
+                            elegantní pokoje s výhledem na hrad a ikonické červené střechy města. </p>
                         <div class="hotel-btn">
-                            <a href="https://www.sirtobys.com/ ">Ukázat více</a>
+                            <a href="https://www.hotelruze.cz/ " target="_blank">Ukázat více</a>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class=".col-lg-6 col-md-6 col-sm-12">
+                    <div class="hotelcard__main">
+                        <div class="hotel__numeric">
+                            09
+                        </div>
+                        <div class="hotelcard__picture">
+                            <a href="https://www.fourseasons.com/prague/utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na " target="_blank"><img src="images/hotelcard9.jpg" class="img-fluid" alt="hotelcard9"></a>
+                        </div>
+                    </div>
+                    <div class="hotelcard__part">
+                        <h3>Four Seasons Hotel Prague </h3>
+                        <p>Tento luxusní hotel nabízí nejvyšší komfort a má výhodnou polohu na břehu řeky Vltavy. Užijte
+                            si luxusní pokoje, vynikající gastronomii a střešní terasu s úchvatnými výhledy. </p>
+                        <div class="hotel-btn">
+                            <a href="https://www.fourseasons.com/prague/utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na " target="_blank">Ukázat
+                                více</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
     <!-- site hotelcard end -->
@@ -250,10 +258,9 @@
         <div class="container">
             <div class="row">
                 <div class="end__content">
-                    <p>Tyto cenově dostupné možnosti v České republice nabízejí komfort, pohodlí a možnost prozkoumat
-                        tuto krásnou zemi, aniž byste překročili váš rozpočet. Ať už prozkoumáváte živé ulice Prahy nebo
-                        klidnou krajinu, v České republice je cenově dostupné ubytování, které vás rádo přivítá na vaší
-                        cestě. </p>
+                    <p>Pamatujte, že nejlepší hotel pro vás závisí na vašich osobních preferencích a plánech cesty. Ať
+                        už hledáte historický šarm, moderní luxus nebo relaxaci v lázních, Česká republika nabízí různé
+                        ubytovací možnosti, které vyhovují vašim potřebám. </p>
                 </div>
             </div>
         </div>
@@ -285,15 +292,17 @@
                     <div class="Useful_link">
                         <h3>Odkazy</h3>
                         <ul>
-                            <li><a href="index.html">Hlavnístránka</a></li>
-                            <li><a href="hotels.html">Hotely</a></li>
-                            <li><a href="budget.html">Rozpočet</a></li>
-                            <li><a href="local-cuisine.html">Místní Kuchyně</a></li>
-                            <li><a href="attraction.html">Atrakce</a></li>
-                            <li><a href="entertainment.html">Zábava</a></li>
-                            <li><a href="contact-us.html">Kontaktujte nás</a></li>
-                            <li><a href="privacy.html">Zásady ochrany </a></li>
-                            <li><a href="terms-conditions.html">Podmínky Objevte </a></li>
+                            <ul>
+                                <li><a href="index.html">Hlavnistranka</a></li>
+                                <li><a href="hotely.html">Hotely</a></li>
+                                <li><a href="rozpocet.html">Rozpocet</a></li>
+                                <li><a href="mistni-kuchyne.html">Mistni Kuchyne</a></li>
+                                <li><a href="atrakce.html">Atrakce</a></li>
+                                <li><a href="zabava.html">Zabava</a></li>
+                                <li><a href="kontaktujte-nas.html">Kontaktujte nas</a></li>
+                                <li><a href="zasady-ochrany.html">Zasady ochrany</a></li>
+                                <li><a href="podminky-objevte.html">Podmínky Objevte</a></li>
+                            </ul>
                         </ul>
                     </div>
                 </div>
