--- a/podminky-objevte.html
+++ b/podminky-objevte.html
@@ -28,13 +28,13 @@
 
             <nav class="site-nav">
                 <ul>
-                    <li><a href="index.html">Hlavnístránka</a></li>
-                    <li><a href="hotels.html">Hotely</a></li>
-                    <li><a href="budget.html">Rozpočet</a></li>
-                    <li><a href="local-cuisine.html">Místní Kuchyně</a></li>
-                    <li><a href="attraction.html">Atrakce</a></li>
-                    <li><a href="entertainment.html">Zábava</a></li>
-                    <li><a href="contact-us.html">Kontaktujte nás</a></li>
+                    <li><a href="index.html">Hlavnistranka</a></li>
+                    <li><a href="hotely.html">Hotely</a></li>
+                    <li><a href="rozpocet.html">Rozpocet</a></li>
+                    <li><a href="mistni-kuchyne.html">Mistni Kuchyne</a></li>
+                    <li><a href="atrakce.html">Atrakce</a></li>
+                    <li><a href="zabava.html">Zabava</a></li>
+                    <li><a href="kontaktujte-nas.html">Kontaktujte nas</a></li>
                     <li>
                         <div class="closed-menu">
                             <a href="#">×</a>
@@ -190,15 +190,15 @@
                     <div class="Useful_link">
                         <h3>Odkazy</h3>
                         <ul>
-                            <li><a href="index.html">Hlavnístránka</a></li>
-                            <li><a href="hotels.html">Hotely</a></li>
-                            <li><a href="budget.html">Rozpočet</a></li>
-                            <li><a href="local-cuisine.html">Místní Kuchyně</a></li>
-                            <li><a href="attraction.html">Atrakce</a></li>
-                            <li><a href="entertainment.html">Zábava</a></li>
-                            <li><a href="contact-us.html">Kontaktujte nás</a></li>
-                            <li><a href="privacy.html">Zásady ochrany </a></li>
-                            <li><a href="terms-conditions.html">Podmínky Objevte</a></li>
+                            <li><a href="index.html">Hlavnistranka</a></li>
+                            <li><a href="hotely.html">Hotely</a></li>
+                            <li><a href="rozpocet.html">Rozpocet</a></li>
+                            <li><a href="mistni-kuchyne.html">Mistni Kuchyne</a></li>
+                            <li><a href="atrakce.html">Atrakce</a></li>
+                            <li><a href="zabava.html">Zabava</a></li>
+                            <li><a href="kontaktujte-nas.html">Kontaktujte nas</a></li>
+                            <li><a href="zasady-ochrany.html">Zasady ochrany</a></li>
+                            <li><a href="podminky-objevte.html">Podmínky Objevte</a></li>
                         </ul>
                     </div>
                 </div>
