--- a/zabava.html
+++ b/zabava.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-lg-2 col-sm-12">
                     <div class="hotel-btn casino">
-                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/">Ukázat
                             více</a>
                     </div>
                 </div>
@@ -121,7 +121,8 @@
                 </div>
                 <div class="col-lg-2 col-sm-12">
                     <div class="hotel-btn casino">
-                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                        <a href="https://www.hilton.com/en/hotels/prghitw-hilton-prague/?SEO_id=GMB-EMEA-T
+                        W-PRGHITW">Ukázat
                             více</a>
                     </div>
                 </div>
@@ -144,7 +145,7 @@
                 </div>
                 <div class="col-lg-2 col-sm-12">
                     <div class="hotel-btn casino">
-                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                        <a href="https://www.pupp.cz/">Ukázat
                             více</a>
                     </div>
                 </div>
@@ -166,7 +167,7 @@
                 </div>
                 <div class="col-lg-2 col-sm-12">
                     <div class="hotel-btn casino">
-                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                        <a href="https://www.casinoadmiralpraha.cz/palladium">Ukázat
                             více</a>
                     </div>
                 </div>
@@ -188,7 +189,7 @@
                 </div>
                 <div class="col-lg-2 col-sm-12">
                     <div class="hotel-btn casino">
-                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                        <a href="https://www.hotel-savannah.com/cz/kasino/">Ukázat
                             více</a>
                     </div>
                 </div>
