--- a/zabava.html
+++ b/zabava.html
@@ -67,12 +67,13 @@
     <section class="homecard entertainment">
         <div class="container">
             <div class="row">
-                <div class="homecard__text">
-                    <p>Pro váš nezapomenutelný zážitek plný vzrušení, luxusu a neomezené zábavy jsou tu kasino hotely!
-                        Pro české návštěvníky jsme připravili tento komplexní srovnávací průvodce, který vám pomůže
-                        najít nejlepší destinace, kde si můžete vychutnat hazardní hry a ubytování na jednom místě. Ať
-                        už jste začátečníkem nebo zkušeným hráčem, máme pro vás něco připraveno. Pojďte se společně
-                        podívat na nejlepší kasino hotely v České republice!</p>
+                <div class="homecard__text hotel">
+                    <h3>Objevte nejlepší herní zážitek v České republice</h3>
+                    <p>Česká republika je zemí, která nabízí širokou škálu zážitků pro všechny typy cestovatelů. Pro ty,
+                        kteří hledají vzrušení a zábavu ve formě hazardních her, existuje v České republice mnoho
+                        možností. Od poutavých kasinových her až po elegantní ubytování, tato země má vše, co byste si
+                        mohli přát. Abychom vám usnadnili výběr a porovnání, přinášíme vám přehled nejlepších nabídek
+                        pro zábavu s hraním v České republice. </p>
                 </div>
             </div>
         </div>
