--- a/hotely.html
+++ b/hotely.html
@@ -344,30 +344,26 @@
     <section class="endtext">
         <div class="container">
             <div class="row">
-                <div class="end__content">
+                <div class="end__content hotely">
                     <h3>Nejlepší tipy při výběru toho správného hotelu pro vás. Ať už si zarezervujete luxusní lázeňský
                         resort, okouzlující butikový pobyt nebo hotel nabízející zábavné kasino a herní zážitky, vždy
                         doporučujeme dodržovat následující tipy: </h3>
-                    <p>Podívejte se na speciální nabídky: </p>
+                    <h4>Podívejte se na speciální nabídky: </h4>
                     <p>Mnoho hotelů nabízí akce, slevy nebo balíčky. Nezapomeňte se podívat na speciální nabídky, které
-                        vám mohou pomoci ušetřit peníze nebo zvýšit hodnotu vašeho pobytu. Vysvětlení zásad zrušení:
+                        vám mohou pomoci ušetřit peníze nebo zvýšit hodnotu vašeho pobytu.
                     </p>
+                    <h4>Vysvětlení zásad zrušení: </h4>
                     <p>Před rezervací si přečtěte storno podmínky hotelu. Život je nepředvídatelný a možná budete muset
-                        změnit své plány. Znalost podmínek zrušení vám může ušetřit zbytečné poplatky.
-                    </p>
-                    <p>Zvažte své cestovní společníky:</p>
+                        změnit své plány. Znalost podmínek zrušení vám může ušetřit zbytečné poplatky.</p>
+                    <h4>Zvažte své cestovní společníky: </h4>
                     <p>Pokud cestujete s rodinou, přáteli nebo dětmi, ujistěte se, že hotel může vaši skupinu pohodlně
-                        ubytovat. Některé hotely nabízejí služby a zařízení vhodné pro rodiny. Bezpečnost a zabezpečení:
-                    </p>
+                        ubytovat. Některé hotely nabízejí služby a zařízení vhodné pro rodiny.</p>
+                    <h4>Bezpečnost a zabezpečení:</h4>
                     <p>Prozkoumejte bezpečnost a zabezpečení umístění hotelu. Přečtěte si o míře kriminality v této
-                        oblasti a vyberte si hotel s dobrými bezpečnostními opatřeními. Přístupnost:
-                    </p>
+                        oblasti a vyberte si hotel s dobrými bezpečnostními opatřeními. </p>
+                    <h4>Přístupnost: </h4>
                     <p>Pokud máte specifické požadavky na mobilitu nebo bezbariérovost, zkontrolujte, zda hotel nabízí
-                        vybavení, jako jsou rampy pro vozíčkáře, výtahy a bezbariérové pokoje. Kontaktujte přímo hotel:
-                    </p>
-                    <p>Pokud máte konkrétní dotazy nebo požadavky, neváhejte kontaktovat přímo hotel telefonicky nebo
-                        e-mailem. To vám může pomoci objasnit jakékoli pochybnosti a posoudit schopnost personálu
-                        reagovat.</p>
+                        vybavení, jako jsou rampy pro vozíčkáře, výtahy a bezbariérové pokoje.</p>
                 </div>
             </div>
         </div>
