--- a/hotely.html
+++ b/hotely.html
@@ -341,7 +341,7 @@
     <!-- site hotelcard end -->
 
     <!-- site ending start -->
-    <section class="endtext">
+    <section class="endtext hotel">
         <div class="container">
             <div class="row">
                 <div class="end__content hotely">
