--- a/hotely.html
+++ b/hotely.html
@@ -364,7 +364,9 @@
                     <h4>Přístupnost: </h4>
                     <p>Pokud máte specifické požadavky na mobilitu nebo bezbariérovost, zkontrolujte, zda hotel nabízí
                         vybavení, jako jsou rampy pro vozíčkáře, výtahy a bezbariérové pokoje.</p>
-                </div>
+             <h4> Kontaktujte přímo hotel</h4>
+                        <p>Pokud máte konkrétní dotazy nebo požadavky, neváhejte kontaktovat přímo hotel telefonicky nebo e-mailem. To vám může pomoci objasnit jakékoli pochybnosti a posoudit schopnost personálu reagovat. </p>
+                    </div>
             </div>
         </div>
     </section>
